2011-01-14  Vincent Scheib  <scheib@chromium.org>

        Reviewed by David Levin.

        Add support to DumpRenderTree to use the GPU rather than software renderer
        https://bugs.webkit.org/show_bug.cgi?id=52333

        * DumpRenderTree/chromium/DumpRenderTree.cpp:
        (main):
        * Scripts/webkitpy/layout_tests/port/chromium.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2011-01-14  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] update fonts.conf to fix 6 linux tests in drt
        https://bugs.webkit.org/show_bug.cgi?id=52411

        * DumpRenderTree/chromium/fonts.conf: Update to match the copy in
            chromium's src/webkit/tools/test_shell/resources/fonts.conf

2011-01-14  Eric Seidel  <eric@webkit.org>

        Original patch from Peter Gal  <galpater@inf.u-szeged.hu>

        Reviewed by Adam Barth.

        Fix when running Tools/Scripts/check-webkit-style without arguments.
        https://bugs.webkit.org/show_bug.cgi?id=52261#c16

        * Scripts/webkitpy/common/checkout/scm.py: Handle None for changed_files argument better in Git.create_patch method.
        * Scripts/webkitpy/common/checkout/scm_unittest.py:

2011-01-04  Jochen Eisinger  <jochen@chromium.org>

        Reviewed by David Levin.

        Store the tempdir object in a variable so it doesn't get deleted too early.
        https://bugs.webkit.org/show_bug.cgi?id=51875

        * Scripts/update-webkit-auxiliary-libs:
        * Scripts/update-webkit-support-libs:

2011-01-14  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Make it work in python 2.5.

        webkit-patch suggest-reviewers dies when ChangeLogs are missing
        https://bugs.webkit.org/show_bug.cgi?id=49158

        * Scripts/webkitpy/common/checkout/api_unittest.py:

2011-01-14  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r75774.
        http://trac.webkit.org/changeset/75774