@@ -1,3 +1,14 @@
+2011-01-14  David Levin  <levin@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        check-webkit-style: _FunctionState should keep track of where the function name starts.
+        https://bugs.webkit.org/show_bug.cgi?id=52454
+
+        * Scripts/webkitpy/style/checkers/cpp.py: Added function_name_start_position to
+        _FunctionState and logic for setting it correctly.
+        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Added tests.
+
 2011-01-14  Vincent Scheib  <scheib@chromium.org>
 
         Reviewed by David Levin.
